# cloud-computing-vanguard-assignment

./: .username  README.md  generate-ppt.py  requirements-all.txt
AWS/: README.md  cloudwatch-log-retrieval.py  publish-message-to-sns.py  send-and-read-msg-from-sqs.py  spin-ec2-instance.py  trigger-lambda-function.py  upload-filet-to-s3.py
Django/: README.md
Django/cloudstorage-demo/: .env  .gitignore  .username  Makefile  README.md  env.example  manage.py  pyproject.toml  requirements.txt  test.py
Django/cloudstorage-demo/cloudstorage/: asgi.py  backend_storage.py  settings.py  urls.py  utils.py  wsgi.py
Django/cloudstorage-demo/storage/: _types.py  admin.py  api.py  apps.py  models.py  schema.py  security.py  signals.py  urls.py  utils.py
Django/cloudstorage-demo/templatess/admin/: dashboard.html
Google-Cloud/: big-query: run-a-query.py  invoke-cloud-function.py  pub-or-sub:publish-a-message.py  pub-or-sub:pull-messages-from-subscription.py  storage:list-buckets-&-upload-file.py
MapReduce/: mrjob: word-count.py  pyspask: word-count.py
MapReduce/Hardoop-Streaming: word-count/: reducer.py  start.sh
Python-Package/: flask: http-server.py  pandas: data-analysis.py  requests: http-request.py  sqlalchemy: database-orm.py
Windows-Azure/: VMs:spin-vms.py  blob-storage:upload-&-list-files.py  cosmos-db:insert-&-query-documents.py  service-bus:receive-message-from-bus.py  service-bus:send-message-to-queue.py
